--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </nav>
     </header>
     <!-- The banner. -->
-    <div class="hero"></div>
+    <div class="hero" title="group meeting"></div>
     <!-- Main content in three sections. -->
     <main class="content">
         <section class="search-engine-optimization">
