--- a/index.html
+++ b/index.html
@@ -31,21 +31,21 @@
     <div class="hero" title="group meeting"></div>
     <!-- Main content in three sections. -->
     <main class="content">
-        <section class="search-engine-optimization">
+        <section id="search-engine-optimization" class="search-engine-optimization">
             <img class="float-left" src="./assets/images/search-engine-optimization.jpg" alt="search-engine-optimization"/>
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
-        <section class="online-reputation-management">
+        <section id="online-reputation-management" class="online-reputation-management">
             <img class="float-right" src="./assets/images/online-reputation-management.jpg" alt="online-reputation-management"/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <section class="social-media-marketing">
+        <section id="social-media-marketing" class="social-media-marketing">
             <img class="float-left" src="./assets/images/social-media-marketing.jpg" alt="social-media-marketing"/>
             <h2>Social Media Marketing</h2>
             <p>
